metacatui/src/main/webapp/js/themes/gulfwatch/css/metacatui.css
/* Import font families */
@import url(https://fonts.googleapis.com/css?family=Lato);
/* Lato weights:
Ultra-Light 100
Ultra-Light 100 Italic
Book 300
Book 300 Italic
Normal 400
Normal 400 Italic
Bold 700
Bold 700 Italic
Ultra-Bold 900
Ultra-Bold 900 Italic
*/
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
/* Open Sans weights:
Book 300 
Book 300 Italic
Normal 400
Normal 400 Italic
Semi-Bold 600
Semi-Bold 600 Italic
Bold 700
Bold 700 Italic
Extra-Bold 800
Extra-Bold 800 Italic
*/
@import url(https://fonts.googleapis.com/css?family=Gentium+Book+Basic);
/* Gentium Book Basic weights:
Normal 400
Normal 400 Italic
Bold 700
Bold 700 Italic
*/
@import url(http://fonts.googleapis.com/css?family=Muli:400,400italic);
/* Muli weights:
Normal 400
Normal italic 400
*/
@import url(http://fonts.googleapis.com/css?family=Cinzel);
/* Cinzel weights:
Normal 400
*/

/* Body CSS
-------------------------------------------------- */
    body {
      color: #555555;
      background-color: #E9E9E1;
      font-family: "Muli", "Helvetica Nueue", "Helvetica", "sans serif";
    }

    body p {
      font-weight: 400;
      line-height: 1.5;
    }
    article, aside, figure, footer, header, hgroup, menu, nav, section { 
      display:block; 
      
    }
    
    body > section, footer {
      min-height: 400px;
      margin: 0;
      z-index: 10;
    }
        
    body > #Content {
    	position: relative;
    	margin: 0px 0px auto 0px;
    	min-height: 600px;
    	padding-top: 130px;
    }
		
    body > section > article {
      min-height: 800px;
      font-weight: 400;
      font-size: 110%;
      line-height: 1.5;
      padding: 0px 0px 40px 0px;  			
    }
    
    h1 > a[name], h2 > a[name], h3 > a[name],
    h4 > a[name], h5 > a[name], h6 > a[name] {
      color: #555555;
      text-decoration: none;
      z-index: 20; /*keeps hidden anchor tags from blocking content*/
    }
    
    /* make sure the anchors render with padding-top */
    h1 > a[name]:before, h2 > a[name]:before, h3 > a[name]:before,
    h4 > a[name]:before, h5 > a[name]:before, h6 > a[name]:before {
		content: "";
    padding-top: 115px;
    }
    
    a {
      color: #00b3ed; 
    }
    
    div.row-fluid > a[name] {
      margin: 35px auto auto auto;
    }
    
/* FORM/INPUT CUSTOMIZATIONS
-------------------------------------------------- */ 
	.controls-well {
	    border: 1px solid #E3E3E3;
	    border-radius: 4px 4px 4px 4px;
	    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
	    padding: 4px;
	}
	.control-label {
		cursor: default;
	}

/* EML CUSTOMIZATIONS
-------------------------------------------------- */
	#Eml h4, .well, .control-label {
		color: #555555;
	}
	
	.well > div > div.span10 {
	  width: 72%;
	}
	
	.well > div > div.span2 {
	  width: 12%;
	}


/* HEADER CSS
-------------------------------------------------- */    
  header#Header {
    position: absolute;
    top: 0px;
    z-index: 100;
    height: 175px;
    background-color: #009999;
    overflow: hidden;
    opacity: 1.0;
    width:100%;    
  }
  
  header#mainHeader {
    position: relative;
    top: 0px;
    z-index: 100;
    min-height: 400px;      
  }

/* NOTIFICATION AREA CSS
 * -------------------------------------------------- */    
  section#Notification {
    position: fixed;
    top: 95px;
    height: 40px;
    width: 100%;
    max-height: 40px;
    min-height: 40px;
    background-color: #FDFDFD;
  }

  
/* FOOTER CSS
-------------------------------------------------- */    

    footer#Footer {
      position: relative;
      bottom: 0px;
      padding-top: 30px;
      padding-bottom: 30px;
      margin-top: 0px;
      color: #FDFDFD;
      background-color: #5A5758;
    }
        
    footer#Footer div#FooterHeading {
      max-width: 650px;
    }

    footer#Footer h2 {
      font: 700 14px/14px "Muli";
      vertical-align: middle;
      padding: 0;
      line-height: 16px;
    }
        
    footer#Footer h3 {
      font: 700 30px/30px "Muli";
      text-align: center;
      padding: 0px 0px 20px 0px;
      margin-bottom: -25px;
      border-bottom: 1px solid #FDFDFD;
      
    }

    footer#Footer h3 > span {
      font: 400 30px/30px "Muli";
      font-style: italic;
    }
    
    footer#Footer h4.subheading {
      vertical-align: baseline;
      padding: 0;
      text-align: center;
      margin-bottom: 40px;
    }
    
    footer#Footer h4.subheading > span {
      font: 400 30px/30px "Muli";
      font-style: italic;
      text-transform: uppercase;
      background-color: #3F3F3F;
      padding: 0px 15px 0px 15px;
    }
    
    footer#Footer ul.helpitems {
      list-style: none;
      list-style-position: inside;
      margin: 0px 0px 40px 0px;
    }
    
    footer#Footer ul.helpitems li {
      font: 400 14px/14px "Muli";
      vertical-align: baseline;
      margin: 15px 0px 0px 0px;                 
    }
    
    ul.helpitems a {
      color: #FDFDFD;
      text-decoration: none;      
    }
    
    ul.helpitems a:hover {
       text-decoration: underline;
    }
    
    footer#Footer .disclaimer {
      color: #FDFDFD;
      font: 100 14px/14px "Muli";      
    }
    
    footer#Footer .acknowledgements {
      margin-top: 40px;
    }

    footer#Footer img:first-of-type {
      width: 110px;
      margin: 0px 0px 20px 0px;
    }

    #footer_signup {
      position: relative;
      left: 50%;
      /*bottom: 0px;*/
      width: 188px;
      margin: 20px auto 20px -94px;
    }
    
    .subfooter ul{
      float:right;
      list-style:none;
    }
    
    .subfooter > ul > li{
      float: left;
      display: inline;
      padding: 0px 5px;
    }
    
    .subfooter ul li:nth-child(n+2){
      border-left: 1px solid #FFFFFF;
    }
    
    .btn, .btn-primary, .btn-large, .btn-small, .btn-mini {
      font-weight: 400;
      background-image: none;
      background-repeat: none;
    }
/* ... */

